# stable-fluids

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: apply_forces.h  apply_forces.hpp  assemble_laplacian.h  assemble_laplacian.hpp  bound.h  conjugate_gradient.h  conjugate_gradient.hpp  diffuse.h  diffuse.hpp  dissipate.h  dissipate.hpp  grid.h  grid.hpp  grid.hpp~  grid2vec.hpp  ind.hpp  lin_interp.h  project.h  project.hpp  transport.h  transport.hpp  vec2grid.hpp  velocity.hpp~
src/: apply_forces.cpp  assemble_laplacian.cpp  bound.cpp  conjugate_gradient.cpp  diffuse.cpp  dissipate.cpp  grid2vec  grid2vec.cpp  ind.cpp  lin_interp.cpp  project.cpp  staggered_grid.cpp  transport.cpp  transport.cpp~  vec2grid.cpp
